--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: CPecopesca
 Type: Package
-Title: A package to perform changepoint analysis by distance on the x-axis and compare results by plotting 2 to 3 graphs in a single plot output.
+Title: Support package for assessing the change in concentration of detected elements in calcified structures.
 Version: 1.1.0
 Author: c(person("Felipe Douglas Mendonça", "Cadilho", email = "sr.cadilho@gmail.com", role = c("aut", "cre")),
              person("Marcus Rodrigues", "da Costa", email = "marcusrc@id.uff.br", role = "aut"),
              person("Paulo Roberto Camponez", "de Almeida", email = "prcalmeida@id.uff.br", role = "aut"))
 Maintainer: Felipe Douglas Mendonça Cadilho <sr.cadilho@gmail.com>
-Description: This program applies the changepoint package using distance on the x-axis. Additionally, it allows the comparison between 2 or 3 
-results generated in a single plot with the capability to display up to 3 lines as a proxy for the analysis.
+Description: This package aims to identify the change point in the concentrations of detected elements in calcified structures, such as otoliths, 
+where the distance between the core and the edge is essential on the x-axis to relate the year and the concentration change.
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
